fixed script tag spacing

--- a/components/XmlTag/XmlTag.module.scss
+++ b/components/XmlTag/XmlTag.module.scss
@@ -20,7 +20,7 @@
 
   .children {
     display: block;
-    margin-left: 0.75em;
+    margin-left: var(--tab-size);
 
     &.script {
       opacity: 0.8;
